--- a/trunk/WIP/Sources/Android/TaxiNetMR/res/values/string.xml
+++ b/trunk/WIP/Sources/Android/TaxiNetMR/res/values/string.xml
@@ -72,7 +72,52 @@
     <string name="forgot_password">Forgor password</string>
     <string name="register">Register</string>
     <string name="deni">Deni</string>
-
+    <string name="success">Success</string>
+    <string name="taxi">Taxi</string>
+    <string name="taxi_truck">Truck</string>
+    <string name="place">Place</string>
+    <string name="packing_place">Packing Place</string>
+    <string name="empty_error">Account and password can\'t be blank</string>
+    <string name="account_error">Wrong format of email or phone number</string>
+    <string name="email_error">Wrong format of email</string>
+    <string name="two_password_error">Two password must be the same</string>
+    <string name="phonenumber_error">Wrong format of phone number</string>
+    <string name="register_blank_error">You must fill all the information</string>
+    <string name="title_activity_main">Push Notifications</string>
+    <string name="error">Error</string>
+    <string name="already_registered">Device is already registered on server.</string>
+    <string name="gcm_registered">From GCM: device successfully registered!</string>
+    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
+    <string name="gcm_message">From GCM: you got message!</string>
+    <string name="gcm_error">From GCM: error (%1$s).</string>
+    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
+    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
+    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
+    <string name="server_registered">From Demo Server: successfully added device!</string>
+    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
+    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
+    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
+    <string name="options_register">Register</string>
+    <string name="options_unregister">Unregister</string>
+    <string name="options_clear">Clear</string>
+    <string name="options_exit">Exit</string>
+    <string name="alert_internet_error_title">Internet Connection Error</string>
+    <string name="alert_internet_error_message">Please connect to working Internet connection</string>
+    <string name="alert_term_title">Term Error</string>
+    <string name="alert_term_message">You need to agree with our term before register</string>
+    <string name="alert_invalid_info">Invalid Information</string>
+    <string name="no_internet_connection">No Internet Connection.</string>
+    <string name="wrong_email_or_password">Email or password is incorrect</string>
+    <string name="lbl_you_are_at">YOU ARE AT</string>
+    <string name="btn_get_location">GET MY LOCATION</string>
+    <string name="btn_start_location_updates">START LOCATION UPDATES</string>
+    <string name="btn_stop_location_updates">STOP LOCATION UPDATES</string>
+    <string name="password_length_error">Password must be more than 6 character</string>
+    <string name="continues">Continue</string>
+    <string name="agree_with_term">I agree with term</string>
+    <string name="picked">Picked</string>
+    <string name="return_customer">Return Customer</string>
+    <string name="email_or_password">Email or phone number</string>
     <!-- Nav Drawer Menu Items -->
     <string-array name="nav_drawer_items">
         <item>Profile</item>
