--- a/trunk/WIP/Sources/Android/TaxiNetMD/res/layout/activity_profile.xml
+++ b/trunk/WIP/Sources/Android/TaxiNetMD/res/layout/activity_profile.xml
@@ -14,16 +14,16 @@
             android:id="@+id/riderImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/et_last_name_profile"
+            android:layout_alignBottom="@+id/et_last_name"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_alignTop="@+id/et_first_name_profile"
+            android:layout_alignTop="@+id/et_first_name"
             android:layout_marginRight="10dp"
             android:contentDescription="@string/app_name"
             android:src="@drawable/ic_launcher" />
 
         <EditText
-            android:id="@+id/et_first_name_profile"
+            android:id="@+id/et_first_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -35,12 +35,12 @@
             android:textSize="18sp" />
 
         <EditText
-            android:id="@+id/et_last_name_profile"
+            android:id="@+id/et_last_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/et_first_name_profile"
+            android:layout_alignLeft="@id/et_first_name"
             android:layout_alignParentRight="true"
-            android:layout_below="@id/et_first_name_profile"
+            android:layout_below="@id/et_first_name"
             android:gravity="left|center"
             android:inputType="text"
             android:text="@string/last_name"
@@ -69,17 +69,17 @@
                 android:id="@+id/tv_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/et_email_profile"
+                android:layout_alignBottom="@+id/et_email"
                 android:layout_alignParentLeft="true"
-                android:layout_alignRight="@+id/tv_password"
-                android:layout_alignTop="@+id/et_email_profile"
+                android:layout_alignRight="@+id/tv_phone"
+                android:layout_alignTop="@+id/et_email"
                 android:gravity="bottom"
                 android:text="@string/email"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/et_email_profile"
+                android:id="@+id/et_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -93,10 +93,10 @@
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/et_phone"
                 android:layout_alignParentLeft="true"
-                android:layout_alignRight="@+id/tv_password"
                 android:layout_alignTop="@+id/et_phone"
                 android:layout_below="@id/tv_email"
                 android:gravity="bottom"
+                android:paddingRight="5dp"
                 android:text="@string/phone"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -106,12 +106,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:layout_below="@id/et_email_profile"
+                android:layout_below="@id/et_email"
                 android:layout_toRightOf="@id/tv_phone"
                 android:ems="10"
                 android:inputType="phone" />
 
-            <TextView
+            <!--
+                 <TextView
                 android:id="@+id/tv_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -122,16 +123,18 @@
                 android:text="@string/password"
                 android:textSize="18sp"
                 android:textStyle="bold" />
+            -->
 
-            <EditText
-                android:id="@+id/et_password_profile"
-                android:layout_width="wrap_content"
+            <Button
+                android:id="@+id/bt_password"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_below="@id/et_phone"
-                android:layout_toRightOf="@id/tv_password"
+                android:layout_marginTop="10dp"
                 android:ems="10"
-                android:inputType="textPassword" />
+                android:onClick="changePassword"
+                android:text="@string/change_password" />
         </RelativeLayout>
 
         <TextView
@@ -224,8 +227,8 @@
             android:layout_below="@id/ll_usual_place"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
-            android:text="@string/logout"
-            android:onClick="logout" />
+            android:onClick="logout"
+            android:text="@string/logout" />
     </RelativeLayout>
 
 </ScrollView>
