--- a/WIP/Sources/Android/TaxiNetMD/res/layout/fragment_blank.xml
+++ b/WIP/Sources/Android/TaxiNetMD/res/layout/fragment_blank.xml
@@ -65,6 +65,12 @@
             android:layout_height="120dp"
             android:scaleType="centerCrop" />
 
+        <ImageView
+            android:layout_width="1dp"
+            android:layout_height="fill_parent"
+            android:layout_margin="1dp"
+            android:background="@drawable/ver_de" />
+
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="120dp"
@@ -81,6 +87,12 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
+            <ImageView
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:layout_margin="1dp"
+                android:background="@drawable/hor_de" />
+
             <TextView
                 android:id="@+id/tv_rider_phone_number"
                 android:layout_width="fill_parent"
@@ -91,6 +103,12 @@
                 android:text="@string/phone_number"
                 android:textSize="18sp"
                 android:textStyle="bold" />
+
+            <ImageView
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:layout_margin="1dp"
+                android:background="@drawable/hor_de" />
 
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -103,9 +121,12 @@
                     android:id="@+id/bt_accept"
                     android:layout_width="0dp"
                     android:layout_height="fill_parent"
+                    android:layout_margin="5dp"
                     android:layout_weight="1"
+                    android:background="@drawable/button_green"
                     android:onClick="accept"
                     android:text="@string/accept"
+                    android:textColor="@color/white"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -113,9 +134,12 @@
                     android:id="@+id/bt_deni"
                     android:layout_width="0dp"
                     android:layout_height="fill_parent"
+                    android:layout_margin="5dp"
                     android:layout_weight="1"
+                    android:background="@drawable/button_red"
                     android:onClick="deni"
                     android:text="@string/deni"
+                    android:textColor="@color/white"
                     android:textSize="18sp"
                     android:textStyle="bold" />
             </LinearLayout>
